add: demo unit test

--- a/SWT301/Demo Unit Test/nbproject/project.properties
+++ b/SWT301/Demo Unit Test/nbproject/project.properties
@@ -24,12 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JUnit-Sample.jar
+dist.jar=${dist.dir}/Demo_Unit_Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.junit-4.13-beta-2.jar=..\\junit-4.13-beta-2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.13-beta-2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,8 +56,10 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=demo.unit.test.DemoUnitTest
+manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
