--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /SWT301/JUnit-Sample/nbproject/private/
+/SWT301/Demo Unit Test/nbproject/private/
+/SWT301/Demo Unit Test/build/
+/SWT301/Demo Unit Test/dist/
