feat: update pe java

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /[[]LAB211] OOP with Java Lab/J1.S.P0101/SourceCode/nbproject/private/
 /[[]LAB211] OOP with Java Lab/J1.S.P0101/SourceCode/build/
+/[[]LAB211] OOP with Java Lab/J1.S.P0101/JavaApplication2/nbproject/private/
+/[[]LAB211] OOP with Java Lab/J1.S.P0101/JavaApplication2/build/
+/[[]PRO192] Java Core/PE/01/Q1/nbproject/private/
+/[[]PRO192] Java Core/PE/01/Q1/build/
+/[[]PRO192] Java Core/PE/01/Q2/nbproject/private/
+/[[]PRO192] Java Core/PE/01/Q3/nbproject/private/
+/[[]PRO192] Java Core/PE/01/Q4/build/
+/[[]PRO192] Java Core/PE/01/Q4/nbproject/private/
+/[[]PRO192] Java Core/PE/01/Q3/build/
+/[[]PRO192] Java Core/PE/01/Q2/build/
